<resources>
    <string name="app_name">Luna</string>
    <string name="welcome">Welcome Back </string>
    <string name="welcome1"> Welcome  </string>
    <string name="slogan"> Sign in to continue </string>
    <string name="slogan1">Create your account </string>

    <string name="name"> Full Name  </string>
    <string name="username"> Username </string>
    <string name="email">Email Address</string>
    <string name="password"> Enter your password .... </string>
    <string name="confirm">Confirm your password </string>


    <!--    BUTTONS -->
    <string name="forget_password"> Forget Password? </string>
    <string name="login"> LOGIN </string>
    <string name="signup">SIGN UP</string>
    <string name="already">Already have an Account? Login Here</string>
    <string name="new_user"> New User ? SIGN UP HERE </string>
    <string name="luna_app">Luna App</string>
    <string name="invalid_fullname">PLease enter your fullname</string>
    <string name="invalid_username">PLease enter your username</string>
    <string name="invalid_emailaddress">Please enter your email address</string>
    <string name="invalid_password">PLease enter your password</string>
    <string name="default_web_client">default_web_client</string>
    <string name="sign_in">Sign In with Google</string>


    <!--    TASK-->
    <string name="newtask">New Task</string>
    <string name="add_save">Save</string>

    <string name="titletasks">Tasks</string>

    <string name="contentdescription">TODO</string>

    //drawer menu string
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

</resources>